# D

./: .env.sample  Dockerfile  blog.json  dentistry.json  docker-compose.yaml  pyproject.toml  readme.md
appointment/: forms.py  models.py  urls.py  views.py
appointment/migrations/: 0001_initial.py  0002_appointment_time_alter_appointment_date.py  0003_appointment_user.py
appointment/templates/appointment/: appointment_list.html  create_appointment.html
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_articles_slug.py  0003_remove_articles_created_at.py
blog/templates/blog/: articles_confirm_delete.html  articles_detail.html  articles_form.html  articles_list.html
config/: settings.py  urls.py
dentistry/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
dentistry/migrations/: 0001_initial.py  0002_services_doctors_photo.py  0003_alter_doctors_specialization_and_more.py  0004_doctors_description_doctor.py  0005_feedback.py  0006_feedback_create_at.py
dentistry/templates/dentistry/: about.html  base.html  contact.html  doctors_confirm_delete.html  doctors_form.html  doctors_list.html  feedback_detail.html  feedback_list.html  services_confirm_delete.html  services_form.html  (+1 more)
dentistry/templatetags/: tags.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_users_options_remove_users_username_and_more.py  0003_remove_users_avatar_remove_users_country_and_more.py  0004_users_token.py  0005_alter_users_first_name_alter_users_last_name.py
(+8 files in other folders)
