[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["Alexandr Sinev <sir.sineow@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
pillow = "^10.4.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
ipython = "^8.26.0"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
